crates/sgf-core/tests/snapshots/ops_scenario_initializers/clear_initializer_3018.snap
---
source: crates/sgf-core/tests/ops_scenario_systems.rs
expression: "report(&session, &result)"
---
Cleared the initializer of Iridonia #3018
touched: [3018]
inverse: SetInitializer { system: 3018, initializer: Some("random_empire_init_01") }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 3 other issues

--- scenario
+++ scenario
@@ -42,7 +42,6 @@
 		id = "3018"
 		name = "Iridonia"
 		position = { x = 40 y = 75 }
-		initializer = random_empire_init_01
 		spawn_weight = { base = 1 }
 		effect = {
 			log = "Success system [This.GetName]"
